--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,7 @@ include:
   - local: 'ci-includes/keptn_evaluation.yaml'
   - local: 'ci-includes/dt_jmeter_loadtest.yaml'
   - local: 'ci-includes/dt_create_keptn_qualitygate.yaml'
+  - local: 'ci-includes/dt_create_create_alerting.yaml'
 
 stages:
   - build
@@ -64,6 +65,12 @@ dt_create_deployment_event:
   only:
     - tags
 
+dt_create_alerting:
+  environment:
+    name: test
+  only:
+    - tags
+    
 dt_create_synthetic_check:
   variables:
     TYPE: PRIVATE
