--- a/ci-includes/dt_create_alerting.yaml
+++ b/ci-includes/dt_create_alerting.yaml
@@ -12,7 +12,7 @@ dt_create_alerting:
         jq -r ".values[] | select(.name == \"${APPLICATION_SHORT_NAME}-GITLAB\") | .id")
 
     if [ "$AP_ID" = "" ]; then
-        echo "Create a new Notification Profile and Notification."
+        echo "Create a new Notification Profile and Integration."
         envsubst < assets/alerting_profile.json > alerting_profile_tmp.json
 
         export PROFILE_ID=$(curl -s -X POST "${API}/alertingProfiles" \
