--- a/ci-includes/dt_create_deployment_event.yaml
+++ b/ci-includes/dt_create_deployment_event.yaml
@@ -11,34 +11,34 @@ dt_create_deployment_event:
       VERSION=${CI_COMMIT_TAG}
     fi
     echo $VERSION
-    export DT_PAYLOAD="
+    export DT_PAYLOAD='
     {
-      \"eventType\": \"CUSTOM_DEPLOYMENT\",
-      \"attachRules\": {
-        \"tagRule\" : {
-            \"meTypes\" : \"SERVICE\",
-            \"tags\" : [ 
+      "eventType": "CUSTOM_DEPLOYMENT",
+      "attachRules": {
+        "tagRule" : {
+            "meTypes" : "SERVICE",
+            "tags" : [ 
               {
-                \"context\": \"CONTEXTLESS\",
-                \"key\": \"keptn_service\", 
-                \"value\": \"${APPLICATION_SHORT_NAME}\"
+                "context": "CONTEXTLESS",
+                "key": "keptn_service", 
+                "value": "'${APPLICATION_SHORT_NAME}'"
               }
             ]
         }
       },
-      \"deploymentName\":\"${CI_COMMIT_MESSAGE}\",
-      \"deploymentVersion\":\"${VERSION}\",
-      \"deploymentProject\":\"${CI_PROJECT_ID}\",
-      \"remediationAction\":\"https://myrevertservice/revert?project=${CI_PROJECT_ID}&service=${APPLICATION_SHORT_NAME}-${CI_ENVIRONMENT_SLUG}&failed_jobid=${CI_JOB_ID}\",
-      \"ciBackLink\":\"${CI_PIPELINE_URL}\",
-      \"source\":\"GitLab\",
-      \"customProperties\":{
-        \"CI_JOB_URL\": \"${CI_JOB_URL}\",
-        \"CI_JOB_ID\": \"${CI_JOB_ID}\",
-        \"CI_PROJECT_ID\": \"${CI_PROJECT_ID}\",
-        \"Commit\": \"${GIT_COMMIT}\"
+      "deploymentName":"'${CI_COMMIT_MESSAGE}'",
+      "deploymentVersion":"'${VERSION}'",
+      "deploymentProject":"'${CI_PROJECT_ID}'",
+      "remediationAction":"https://myrevertservice/revert?project='${CI_PROJECT_ID}'&service='${APPLICATION_SHORT_NAME}'-'${CI_ENVIRONMENT_SLUG}'&failed_jobid='${CI_JOB_ID}'",
+      "ciBackLink":"'${CI_PIPELINE_URL}'",
+      "source":"GitLab",
+      "customProperties":{
+        "CI_JOB_URL": "'${CI_JOB_URL}'",
+        "CI_JOB_ID": "'${CI_JOB_ID}'",
+        "CI_PROJECT_ID": "'${CI_PROJECT_ID}'",
+        "Commit": "'${GIT_COMMIT}'"
       }
     }
-    "
+    '
     echo $DT_PAYLOAD > payload.tmp
     curl -L -H "Authorization: Api-Token ${DT_API_TOKEN}" -H "Content-Type: application/json" "https://${DT_TENANT_ID}.live.dynatrace.com/api/v1/events" -d @payload.tmp
