--- a/ci-includes/dt_create_synthetic_check.yaml
+++ b/ci-includes/dt_create_synthetic_check.yaml
@@ -4,6 +4,7 @@ dt_create_synthetic_check:
   variables:
       GIT_STRATEGY: none
       FREQUENCY: 5
+      TYPE: PRIVATE
   script: |
     # Getting Synthetic Check Locations
     curl -s -H "Authorization: Api-Token ${DT_API_TOKEN}" -X GET "https://${DT_TENANT_ID}.live.dynatrace.com/api/v1/synthetic/locations?type=${TYPE}" | jq . > locations.txt
@@ -51,7 +52,7 @@ dt_create_synthetic_check:
       "type": "HTTP",
       "name": "'${CI_ENVIRONMENT_SLUG}' - '${APPLICATION_SHORT_NAME}' - Ping",
       "locations": [
-        ${LOC}
+        '${LOC}'
       ],
       "enabled": true,
       "script": {
