--- a/ci-includes/dt_create_synthetic_check.yaml
+++ b/ci-includes/dt_create_synthetic_check.yaml
@@ -97,9 +97,7 @@ dt_create_synthetic_check:
     # Create a Syntetic
     echo $json_payload > syntetic.json  
     # Getting Syntetic Monitor by Tag
-    entityId=$(curl -s -X GET "${API}/monitors?tag=keptn_service:${APPLICATION_SHORT_NAME}&tag=keptn_stage:${CI_ENVIRONMENT_SLUG}" -H "Authorization: Api-Token ${DT_API_TOKEN}" | jq .monitors[0].entityId)
-    # Remove Quotes from entityId
-    entityId=$(echo "$entityId" | sed -e 's/^"//' -e 's/"$//')
+    entityId=$(curl -s -X GET "${API}/monitors?tag=keptn_service:${APPLICATION_SHORT_NAME}&tag=keptn_stage:${CI_ENVIRONMENT_SLUG}" -H "Authorization: Api-Token ${DT_API_TOKEN}" | jq -r .monitors[0].entityId)
 
     if [ "$entityId" == "null" ]; then
         echo "No Synthetic found, create a new one."
