--- a/ci-includes/dt_create_synthetic_check.yaml
+++ b/ci-includes/dt_create_synthetic_check.yaml
@@ -7,7 +7,7 @@ dt_create_synthetic_check:
       TYPE: PRIVATE
       LOCATIONS: 1
       URL: detect
-      MANUALLYASSIGNEDAPPS:
+      MANUALLYASSIGNEDAPPS: ""
   script: |
     # Getting Synthetic Check Locations
     curl -s -H "Authorization: Api-Token ${DT_API_TOKEN}" -X GET "https://${DT_TENANT_ID}.live.dynatrace.com/api/v1/synthetic/locations?type=${TYPE}" | jq . > locations.txt
