--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -129,7 +129,7 @@ Install Keptn:
     echo "Wait for DNS Record being updated"
     sleep 100
     
-    echo y|keptn configure domain ${AWS_ROUTE53_DOMAIN} --keptn-version=release-0.6.0.beta2
+    echo y|keptn configure domain ${AWS_ROUTE53_DOMAIN}
     echo "Configure GitLab CI/CD Variable"
     export KEPTN_API=$(head -1 ~/.keptn/.keptn)
     export KEPTN_TOKEN=$(tail -1 ~/.keptn/.keptn)
@@ -137,28 +137,6 @@ Install Keptn:
     # Create bridge    
     sed -i -- s/DOMAIN_PLACEHOLDER/${AWS_ROUTE53_DOMAIN}/g bridge.yaml
     kubectl apply -f bridge.yaml
-    #POST /projects/:id/variables
-    GL_API="${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/variables"
-    echo $KEPTN_API
-    #echo $KEPTN_TOKEN
-    curl -s --header "PRIVATE-TOKEN: ${GL_API_TOKEN}" $GL_API | jq .[]
-
-    TOKEN_EXISTS=$(curl -s --header "PRIVATE-TOKEN: ${GL_API_TOKEN}" $GL_API | jq '.[] | select (.key=="KEPTN_TOKEN")')
-    echo $TOKEN_EXISTS
-    echo $GL_API
-
-    if [ "$TOKEN_EXISTS" = "" ]; then
-      noout=$(curl -s --request POST -H "PRIVATE-TOKEN: ${GL_API_TOKEN}" $GL_API --form "key=KEPTN_TOKEN" --form "value=${KEPTN_TOKEN}" --form "masked=true")
-    else
-      noout=$(curl -s --request PUT -H "PRIVATE-TOKEN: ${GL_API_TOKEN}" "${GL_API}/KEPTN_TOKEN" --form "value=${KEPTN_TOKEN}")
-    fi
-
-    KEPTN_API_EXISTS=$(curl -s --header "PRIVATE-TOKEN: ${GL_API_TOKEN}" $GL_API | jq '.[] | select (.key=="KEPTN_API")')
-    if [ "$KEPTN_API_EXISTS" = "" ]; then
-      noout=$(curl -s --request POST -H "PRIVATE-TOKEN: ${GL_API_TOKEN}" $GL_API --form "key=KEPTN_API" --form "value=${KEPTN_API}"  --form "masked=true")
-    else
-      noout=$(curl -s --request PUT -H "PRIVATE-TOKEN: ${GL_API_TOKEN}" "${GL_API}/KEPTN_API" --form "value=${KEPTN_API}")
-    fi    
   when: manual  
 
 ###############################################################################
