Update add resource for SLI

--- a/ci-includes/dt_create_keptn_qualitygate.yaml
+++ b/ci-includes/dt_create_keptn_qualitygate.yaml
@@ -60,6 +60,5 @@ create-keptn-qualitygate:
       kubectl create secret generic dynatrace-credentials-$APPLICATION_SHORT_NAME -n "keptn" --from-file=dynatrace-credentials=dynatrace_secret.yaml
     fi    
   
-    cat dynatrace_sli.yaml
-    kubectl apply -f dynatrace_sli.yaml
     keptn add-resource --project=$APPLICATION_SHORT_NAME --service=$APPLICATION_SHORT_NAME --stage=$CI_ENVIRONMENT_SLUG --resource=dynatrace_slo.yaml --resourceUri=slo.yaml  
+    keptn add-resource --project=$APPLICATION_SHORT_NAME --stage=$CI_ENVIRONMENT_SLUG --service=$APPLICATION_SHORT_NAME --resource=dynatrace_sli.yaml --resourceUri=dynatrace/sli.yaml
