--- a/ci-includes/keptn_evaluation.yaml
+++ b/ci-includes/keptn_evaluation.yaml
@@ -14,7 +14,7 @@ keptn_evaluation:
     entityId=$(curl -s -X GET "https://${DT_TENANT_ID}.live.dynatrace.com/api/v1/entity/services?tag=keptn_stage:${CI_ENVIRONMENT_SLUG}&tag=keptn_service:${APPLICATION_SHORT_NAME}&relativeTime=5mins" -H "Authorization: Api-Token ${DT_API_TOKEN}" | jq -r .[].entityId)
     tsLastDeployment=$(curl -s -H "Authorization: Api-Token ${DT_API_TOKEN}" "https://${DT_TENANT_ID}.live.dynatrace.com/api/v1/events?eventType=CUSTOM_DEPLOYMENT&entityId=${entityId}" | jq .events[0].startTime)
     tsLastDeployment=$(echo "(${tsLastDeployment} + 500) / 1000" | bc)
-    tsStart=$(date -Is -d @${tsLastDeployment})
+    tsStart=$(date -u +%Y-%m-%dT%H:%M:%S+0000 @$tsLastDeployment)
     tsNow=$(date +%s)
     tsDiffMin="$(($tsNow-$tsLastDeployment))"
     tsDiffMin="$(($tsDiffMin/60))"
